--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 .nav-buttons {
-    margin-left: 60%;
+    margin-left: 50%;
 }
 
 h2{
@@ -32,8 +32,26 @@ h6{
     color: #d8d8d8;
 }
 
+button{
+    font-size: 0.8rem;
+    font-weight: 800;
+    outline: none;
+    border: none;
+    background-color: #1d1d1d;
+    color: aliceblue;
+    padding: 13px 30px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.5s ease;
+    border-radius: 5px;
+}
+
+button:hover{
+    background-color: rgb(0, 68, 68);
+}
+
 .navbar{
-    font-size: 16px;
+    font-size: 20px;
     padding-top: 2rem !important;
     padding-bottom: 2rem !important;
     top: 0;
@@ -50,7 +68,7 @@ h6{
 .navbar i:hover,
 .navbar-light .navbar-nav .nav-link.active
 .navbar i:hover{
-    color: aqua;
+    color: rgb(0, 68, 68);
 }
 
 .navbar i {
@@ -60,4 +78,15 @@ h6{
     font-weight: 500;
     cursor: pointer;
     margin-left: 5px;
+}
+
+#home{
+    background-image: url();
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
