--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,8 @@ button:hover{
     padding-bottom: 2rem !important;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar-light .navbar-nav .nav-link{
@@ -80,6 +82,23 @@ button:hover{
     margin-left: 5px;
 }
 
+@media only screen and (max-width: 900px){
+    .nav-buttons{
+        margin: 10px;
+    }
+
+    .nav-buttons ul{
+        margin: 1rem;
+        justify-content: flex-start;
+        align-items: flex-start;
+        text-align: left;
+    }
+
+    .nav-buttons ul .fas{
+        margin: 20px 5px 10px 20px;
+    }
+}
+
 #home{
     background-image: url();
     width: 100%;
@@ -89,4 +108,47 @@ button:hover{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+}
+
+#new .one img{
+    width: 100%;
+    height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+
+#new .one{
+    position: relative;
+}
+
+#new .one .details {
+    position: absolute;
+    top: 80%;
+    left: 0;
+    width: 100%;
+    font-weight: bold;
+    transition: 0.4s ease;
+    /* opacity: 0.8;
+    background-color: black; */
+    /* color: #d8d8d8; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: start;
+}
+
+/* #new .one:nth-child(1) .details{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: start;
+} */
+
+#new .one img:hover{
+    transform: scale(1.1);
+    transition: 0.4s ease;
 }
