--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,3 +152,47 @@ button:hover{
     transform: scale(1.1);
     transition: 0.4s ease;
 }
+
+/*Product section*/
+.product {
+    cursor: pointer;
+    margin-bottom: 2rem;
+}
+
+.product img{
+    transition: 0.3s all;
+
+}
+
+.product:hover img{
+    opacity: 0.7;
+}
+
+.product .buy-btn{
+    background-color: rgb(0, 68, 68);
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 0.3s all;
+}
+
+.product:hover .buy-btn{
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+hr{
+    width: 200px;
+    height: 5px !important;
+    opacity: 1;
+    background-color: rgb(0, 68, 68);
+}
+
+.star {
+    padding: 10px 0;
+
+}
+
+.star i {
+    font-size: 1rem;
+    color: goldenrod;
+}
