--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -196,3 +196,31 @@ hr{
     font-size: 1rem;
     color: goldenrod;
 }
+
+/*Banner*/
+#banner{
+    background-image: url();
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-position-x: center;
+    background-position-y: 80px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+#banner h1{
+    color: rgb(0, 68, 68);
+}
+
+#banner button {
+    background-color: rgb(0, 68, 68);
+}
+
+#banner button:hover{
+    background-color: #1d1d1d;
+}
