--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -282,3 +282,12 @@ footer .socials {
 footer p{
     color: #d8d8d8;
 }
+
+.pagination a{
+    color: rgb(0, 68, 68);
+}
+
+.pagination li:hover a{
+    color:#d8d8d8;
+    background-color: rgb(0, 68, 68);
+}
