--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -291,3 +291,14 @@ footer p{
     color:#d8d8d8;
     background-color: rgb(0, 68, 68);
 }
+
+/*Single product page*/
+.small-img-group{
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img-col{
+    flex-basis: 23%;
+    cursor: pointer;
+}
