--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,3 +325,90 @@ footer p{
     background-color:#1d1d1d;
     
 }
+
+/*Cart Start*/
+.cart table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.cart .product-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cart th{
+    text-align: left;
+    padding: 5px 10px;
+    color: #d8d8d8;
+    background-color: rgb(0, 68, 68);
+}
+
+.cart td{
+    padding: 10px 20px;
+}
+
+.cart td img{
+    width: 100px;
+    margin-right: 10px;
+}
+
+.cart td input{
+    width: 50px;
+    height: 30px;
+    padding: 5px;
+}
+
+.cart td a {
+    color: rgb(0, 68, 68);
+}
+
+.cart .remove-btn{
+    color: rgb(0, 68, 68);
+    text-decoration: none;
+    font-size: 15px;
+}
+
+.cart .edit-btn{
+    color: rgb(0, 68, 68);
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.cart .product-info p{
+    margin: 3px;
+}
+
+.cart-total{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.cart-total table{
+    width: 100%;
+    max-width: 500px;
+    border-top: 3px solid rgb(0, 68, 68);
+}
+
+td:last-child{
+    text-align: right;
+}
+
+th:last-child{
+    text-align: right;
+}
+
+.checkout-btn{
+    color: #d8d8d8;
+    background-color: rgb(0, 68, 68);
+}
+
+.checkout-btn:hover{
+    color: #d8d8d8;
+    background-color: #1d1d1d;
+}
+
+.checkout-container{
+    display: flex;
+    justify-content: flex-end;
+}
