--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -435,3 +435,26 @@ th:last-child{
 #login-form #register-url{
     color: rgb(0, 68, 68);
 }
+
+/*Register form*/
+#registration-form{
+    width: 50%;
+    margin: 5px auto;
+    text-align: center;
+    padding: 20px;
+    border-top: 2px solid rgb(0, 68, 68);
+}
+
+#registration-form input{
+    width: 50%;
+    margin: 5px auto;
+}
+
+#registration-form #register-btn{
+    background-color: rgb(0, 68, 68);
+    color: #d8d8d8;
+}
+
+#registration-form #login-url{
+    color: rgb(0, 68, 68);
+}
