--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -488,3 +488,32 @@ th:last-child{
     color: rgb(0, 68, 68);
     text-decoration: none;
 }
+
+/*Orders*/
+.orders table{
+    width: 100%;
+    border-collapse: collapse;
+
+}
+
+.orders .product-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.orders th{
+    
+    padding: 5px 10px;
+    color: #d8d8d8;
+    background-color: rgb(0, 68, 68);
+}
+
+.orders td{
+    padding: 10px 20px;
+}
+
+.orders td img{
+    width: 80px;
+    height: 100px;
+
+}
