--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -517,3 +517,39 @@ th:last-child{
     height: 100px;
 
 }
+
+/*Checkout*/
+#checkout-form .checkout-small{
+    display: inline-block;
+    width: 48%;
+    margin: 10px auto;
+}
+
+#checkout-form .checkout-large{
+    width: 96%;
+}
+
+#checkout-form .checkout-btn-container{
+    margin: 10px;
+    text-align: right;
+    margin-right: 4%;
+}
+
+#checkout-form #checkout-btn{
+    color: #d8d8d8;
+    background-color: rgb(0, 68, 68);
+}
+
+@media only screen and (max-width: 990px){
+    #checkout-form .checkout-small{
+        display: flex;
+        flex-direction: column;
+        width: 96%;
+        margin: 10px auto;
+    }
+
+    #checkout-form .checkout-large{
+        width: 96%;
+        margin: 10px auto;
+    }
+}
