--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -293,6 +293,10 @@ footer p{
 }
 
 /*Single product page*/
+.single-product #mainImg{
+    max-width: 335px;
+    height: 50%;
+}
 .small-img-group{
     display: flex;
     justify-content: space-between;
