--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,47 +122,15 @@ button:hover{
     background-repeat: no-repeat;
 }
 
-#new .one img{
-    width: 80%;
-    height: 550px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
+
+
+#new .card {
+    width: 65%;
+    height: 100%;
 }
-
-#new .one{
-    position: relative;
-}
-
-#new .one .details {
-    position: absolute;
-    top: 80%;
-    left: 0;
-    width: 100%;
-    font-weight: bold;
-    transition: 0.4s ease;
-    /* opacity: 0.8;
-    background-color: black; */
-    /* color: #d8d8d8; */
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: start;
-}
-
-/* #new .one:nth-child(1) .details{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: start;
-} */
-
-#new .one img:hover{
-    transform: scale(1.1);
-    transition: 0.4s ease;
+#new .card img{
+    max-width: 100%;
+    max-height: 300px;
 }
 
 /*Product section*/
@@ -374,7 +342,11 @@ footer p{
     font-size: 15px;
     background-color: white;
     border: none;
-    width: 100%;
+    width: 70px;
+}
+
+.cart .remove-btn-id{
+    width: 0px;
 }
 
 .cart .edit-btn{
