--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -544,3 +544,8 @@ th:last-child{
 #contact h6{
     color: rgb(0, 68, 68);
 }
+
+.pay-now-btn{
+    color: rgb(0, 68, 68);
+    text-decoration: none;
+}
