--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -401,6 +401,14 @@ th:last-child{
 }
 
 /*Login start*/
+/* #login-form{
+    width: 50%;
+    margin: 5px auto;
+    text-align: center;
+    padding: 20px;
+    border-top: 2px solid rgb(0, 68, 68);
+} */
+
 #login-form{
     width: 50%;
     margin: 5px auto;
