--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -562,3 +562,8 @@ th:last-child{
     color: rgb(0, 68, 68);
     text-decoration: none;
 }
+
+#checkout-form #checkout-btn{
+    color: #d8d8d8;
+    background-color: rgb(0, 68, 68);
+}
