--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -567,3 +567,12 @@ th:last-child{
     color: #d8d8d8;
     background-color: rgb(0, 68, 68);
 }
+
+#shop .card {
+    width: 25%;
+    height: 50%;
+}
+#shop .card img{
+    max-width: 100%;
+    max-height: 200px;
+}
